--- a/Daily_Entries/2492020.md
+++ b/Daily_Entries/2492020.md
@@ -6,6 +6,14 @@
 
 ## Tasks Completed
 
+- Created a product backlog
+
 ## My Contributions
 
+- Researched on templates about how to create a backlog and how to prioritize features
+- Helped with listing out features and identifying some benefits to said features.
+- Helped the with creating the backlog template and prioritizing/organizing features.
+
 ## Lessons Learned
+
+- The workings of a product backlog and how to choose and prioritize features in a product backlog.
