small adjustemtns to the menu

--- a/Daily_Entries/19102020.md
+++ b/Daily_Entries/19102020.md
@@ -1,6 +1,6 @@
 # Journal Entry
 
-**Date**: `Monday 19 October, 2020`
+**Date**: `Thursday 8 October to Monday 19 October, 2020`
 
 **Hours worked**: `9`
 
