oct tober 2nd update

--- a/Daily_Entries/02102020.md
+++ b/Daily_Entries/02102020.md
@@ -7,8 +7,16 @@
 ## Tasks Completed
 - Added Ionic frontend auto-generated menu template app 
   
-## My Contributions
-- The above task
+## Summary
+  This day was about learning more about Ionic and Angular. As for the application, an moke-up was created using the basic ionic template, which allowed me to explore more about the routing aspects of angular and how to manipulate the code to see some custom output.
 
-## Lessons Learned
-- How angular routing works and how to create custom components and use them in the dom.
+  ![Custom Output Example](images/starterTemplate.png)
+
+  By editing routes, I was able to edit some of the internal structure of the application and what the url was directing to the
+
+  ![Custom URL Direction](images/routingTemplate.png)
+
+  The team decided use this template as the project progresses which will need more research on how to handle roles when the app is used by either a customer or a pharmacist.
+  
+
+
