--- a/Daily_Entries/24102020.md
+++ b/Daily_Entries/24102020.md
@@ -8,10 +8,6 @@
 - Had the retrospective/ Sprint review meetings
 - Had the meeting for the beginning of the next Sprint meeting
 
-## My Contributions
-- Fixed some errors when communicating with the server from the client-side
-- Started research on floating buttons for Ionic applications.
-- helped with task breakdown for the next sprint.
-## Lessons Learned
-- How to conduct and pass ideas in a Sprint meetings
-- How to properly use Trello to track and mange task breakdowns.
+
+## Summary
+This week has been slow in terms of project progress due to other responsibilities. This was mostly about closing sprint 1 and discussing issues and concerns so we can improve for sprint 2. I managed to fix some errors that occurred when the client tries to communicate with the server and made my own task breakdown to be presented in the meeting. 
