--- a/Daily_Entries/30102020.md
+++ b/Daily_Entries/30102020.md
@@ -11,7 +11,7 @@
 -  Delegations of work for developers to phase themselves.
 
 ## Summary
-During these few days, the team met up twice, firstly to have our sprint review and retrospective meetings, then to talk about how the development team(me and Jesse) failed meet the required user story (login and register) and how we would have to push that task/user-story to the next sprint.
+During these few days, the team met up twice, firstly  to talk about how the development team(me and Jesse) failed meet the required user story (login and register) and how we would have to push that task/user-story to the next sprint.
 
 ![Trello Board sprint 1](./images/trello1.png)
 
